# monday-jobs

./: .gitignore  Cargo.toml  README.md  __job_ship_dates.xlsx  deploy.py  entrypoint.py  entrypoint.spec  freeze.spec  index.html  monday.py  package-lock.json  package.json  pnpm-lock.yaml  setup.py  tsconfig.json  vite.config.ts
data/: Job Ship Dates.xlsx  MondayUpdates.json  MondayUpdates.txt  __job_ship_dates.xlsm  __job_ship_dates.xlsx  test.csv  test.xlsx
public/: index.html
py/: LICENSE
python/: README.md  __job_ship_dates.xlsx
react/src/: App.css  App.js  serviceWorker.js
react/src/components/: fileDropper.css  fileDropper.js  terminal.css  terminal.js
src/: App.css  App.js  App.svelte  FileParserService.js  fileParser.js  main.rs  main.ts
src/assets/fontawesome6/: VERSION.txt
src/components/: AsyncGroup.svelte  AsyncMessage.svelte  FileDropper.svelte  Terminal.svelte  fileDropper.css  fileDropper.js  terminal.css  terminal.js
src/lib/: FileParser.ts  Terminal.ts  job.ts
src/lib/components/: FileDropper.svelte  Terminal.svelte  TerminalLine.svelte
src/lib/services/: MondayService.ts
src/routes/: +page.svelte
src/services/: Base.ts  FileParserService.js  MondayService.js  MondayService.ts  OfflineService.ts
