[package]
name = "monday-jobs"
version = "0.1.0"
authors = ["paddymills <paddymills@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.16"
regex = "1.3.9"
lazy_static = "1.4.0"

[dependencies.calamine]
version = "0.16.1"
features = ["dates"]
